# python-bobifi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
bobifi/: metadata.py  samtrafiken.py
bobifi/samtrafiken/: prod.py  test.py
test/: test_keys.py  test_metadata.py
tests/: test_keys.py  test_metadata.py
