[project]
name = "bobifi"
description = "BoB Metadata Keys and URLs"
authors = [
    {name = "Jakob Schlyter", email="jakob@kirei.se"},
]
dynamic = ["version"]
license = "BSD-2-Clause"
repository = "https://github.com/bobcat-ticketing/python-bobifi'"
readme = "README.md"
include = ["bobifi/data/*.json"]
requires-python = "<4.0,>=3.11"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "cryptojwt>=1.10.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-ruff>=0.5",
    "ruff>=0.13.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
known-first-party = [
    "bobfi",
]
